--- a/style.css
+++ b/style.css
@@ -47,9 +47,20 @@ body {
 nav .logo,
 nav .nav-links,
 .theme-toggle,
+.lang-toggle,
 .hamburger,
 .circle {
     opacity: 0;
+}
+
+.lang-toggle{
+    transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+@media (max-width: 768px) {
+    .nav-controls .lang-toggle {
+        display: none;
+    }
 }
 
 /* Theme Toggle Button */
@@ -1085,7 +1096,7 @@ nav {
 .card-horizontal-image img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     transition: transform 0.5s ease;
 }
 
